--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/icon.651e50c3.png" />
+    <link rel="icon" type="image/svg+xml" href="/ai-recipes/assets/icon.651e50c3.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.a0027dd6.js"></script>
-    <link rel="stylesheet" href="/assets/index.e5470415.css">
+    <script type="module" crossorigin src="/ai-recipes/assets/index.a0027dd6.js"></script>
+    <link rel="stylesheet" href="/ai-recipes/assets/index.e5470415.css">
   </head>
   <body>
     <div id="root"></div>
