--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/ai-recipes/assets/icon.651e50c3.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-    <script type="module" crossorigin src="/ai-recipes/assets/index.a0027dd6.js"></script>
-    <link rel="stylesheet" href="/ai-recipes/assets/index.e5470415.css">
+    <title>AI Recipes</title>
+    <script type="module" crossorigin src="/ai-recipes/assets/index.58595aff.js"></script>
+    <link rel="stylesheet" href="/ai-recipes/assets/index.1ca561ef.css">
   </head>
   <body>
     <div id="root"></div>
